--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ description = "A module to efficiently read and write GNU Radio File Meta Sink f
 [dependencies]
 thiserror = "2.0.16"
 byteorder = "1"
+fixed = "1.29.0"
