--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ description = "A module to efficiently read and write GNU Radio File Meta Sink f
 thiserror = "2.0.16"
 byteorder = "1"
 fixed = "1.29.0"
+num-complex = "0.4.6"
